# ChatBot

./: .clangd  .gitignore  CMakeLists.txt  ChatBot.cpp  ChatBot.out  README.md  chat.cpp  chat.h  chat_bot.cpp  chat_system.cpp  chat_system.h  code_auth_menu.cpp  code_auth_menu.h  code_init_system.cpp  code_init_system.h  code_main_menu.cpp  code_main_menu.h  code_registration.cpp  code_registration.h  code_registrationARCH.cpp  code_user_reg.cpp  code_user_reg.h  for_chat.txt  message.cpp  message.h  messageContentStruct.h  message_content.h  sendMessage.h  user.cpp  user.h  user_chat_list.cpp  user_chat_list.h
docs/html/: ChatBot_8cpp.html  ChatBot_8cpp__incl.map  ChatBot_8cpp__incl.md5  ChatBot_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  ChatBot_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  annotated.html  chat_8h.html  chat_8h__dep__incl.map  chat_8h__dep__incl.md5  chat_8h__incl.map  chat_8h__incl.md5  chat_8h_source.html  classChat-members.html  classChat.html  classIMessage-members.html  classIMessage.html  classIMessage__inherit__graph.map  classIMessage__inherit__graph.md5  classISendMessage-members.html  classISendMessage.html  classISendMessage__inherit__graph.map  classISendMessage__inherit__graph.md5  classMessage-members.html  classMessage.html  classMessage__coll__graph.map  classMessage__inherit__graph.md5  classSendToAll.html  classSendToOne-members.html  classSendToOne.html  classSendToOne__inherit__graph.map  classSendToOne__inherit__graph.md5  classSendToSeveral-members.html  classSendToSeveral.html  classSendToSeveral__coll__graph.md5  (+42 more)
(+54 files in other folders)
